# qwik

./: .REFACTOR_NOTES  .REFACTOR_NOTES.md  .all-contributorsrc  .bazel_fix_commands.json  .bazelignore  .bazelrc  .dockerignore  .envrc  .eslintignore  .eslintrc.cjs  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .npmrc  .nvmrc  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  .yarnrc.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTINUOUS_BUILD.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  DEVELPER.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  PR-TODO-DO-NOT-MERGE.md  README.md  ROADMAP.md  (+51 more)
client/: BUILD.bazel  CONFIG.ts  README.md  api-extractor.json  api-extractor.verify.json  event.ts  event_handler.ts  extract.ts  index.ts  inject.ts  package.json  qoot.api.gold.md  qoot.api.md  qoot.ts  qootloader.ts  qwik.api.gold.md  qwikloader.ts  render.ts  state.ts
client/assert/: BUILD.bazel  README.md  assert.ts  assert.unit.ts  index.ts
client/cjs/: BUILD.bazel  index.ts  package.json
client/component/: BUILD.bazel  README.md  component.ts  component.unit.ts  index.ts  inject_constructor.ts  provide_component.ts  provide_component.unit.ts  provide_component_prop.ts  provide_component_prop.unit.ts  provide_component_props.ts  provide_component_props.unit.ts  provide_component_state.ts  provide_component_state.unit.ts  provide_prop.ts  provide_prop.unit.ts  provide_props.ts  provide_props.unit.ts  provide_qrl_exp.ts  provide_qrl_exp.unit.ts  traversal.ts  types.ts
client/config/: BUILD.bazel  index.ts  qGlobal.ts  qGlobal.unit.ts
client/entity/: README.md  entity.ts  entity.unit.ts  entity_key.ts  entity_key.unit.ts  index.ts
client/error/: BUILD.bazel  README.md  data.ts  error.ts  stringify.ts
client/event/: BUILD.bazel  README.md  emeti_event.unit.ts  emit_event.ts  emit_event.unit.ts  event_entity.ts  event_injector.ts  event_injector.unit.ts  event_service.ts  index.ts  inject_event_handler.ts  inject_event_handler.unit.ts  provide_element.ts  provide_element.unit.ts  provide_event.ts  provide_event.unit.ts  provide_qrl_exp.ts  provide_qrl_exp.unit.ts  provide_url.ts  provide_url.unit.ts  types.ts
client/import/: BUILD.bazel  README.md  index.ts  qImport.ts  qImport.unit.ts  qImport_default_unit.ts  qImport_symbol_unit.ts  qrl.ts  qrl.unit.ts  types.ts
client/injection/: BUILD.bazel  README.md  base_injector.ts  base_injector.unit.ts  element_injector.ts  element_injector.unit.ts  event_injector.ts  get_injector.unit.ts  index.ts  inject.ts  inject.unit.ts  inject_event_handler.ts  injection.unit.ts  provide_event_prop.ts  provide_injector.ts  provide_injector.unit.ts  provide_provider_of.ts  provide_provider_of.unit.ts  provide_qrl_exp.ts  provide_qrl_exp.unit.ts  resolve_args.unit.ts  storage.ts  types.ts
client/injector/: README.md  base_injector.ts  base_injector.unit.ts  element_injector.ts  element_injector.unit.ts  get_injector.unit.ts  index.ts  inject.ts  inject.unit.ts  provide_injector.ts  provide_injector.unit.ts  provide_provider_of.ts  provide_provider_of.unit.ts  resolve_args.ts  resolve_args.unit.ts  types.ts
client/provider/: README.md  index.ts  provide_component_prop.ts  provide_component_prop.unit.ts  provide_component_props.ts  provide_component_props.unit.ts  provide_component_state.ts  provide_component_state.unit.ts  provide_entity.ts  provide_entity.unit.ts  provide_entity_state.ts  provide_entity_state.unit.ts  provide_service.ts  provide_service.unit.ts  provide_service_state.ts  provide_service_state.unit.ts
client/render/: BUILD.bazel  README.md  index.ts  serialize_state.ts  serialize_state.unit.ts  types.ts
client/service/: BUILD.bazel  index.ts  provide_service.ts  provide_service.unit.ts  provide_service_state.ts  provide_service_state.unit.ts  retrieve_service.ts  retrieve_state.ts  service.ts  service.unit.ts  service_key.ts  service_key.unit.ts  types.ts
client/testing/: BUILD.bazel  component_fixture.ts  component_fixture.tsx  componentize.ts  element_fixture.ts  node_utils.ts  node_utils.unit.ts  service_fixture.ts
client/util/: BUILD.bazel  array.ts  attributes.ts  attributes.unit.ts  base_uri.ts  base_uri.unit.ts  case.ts  case.unit.ts  dirname.ts  dirname.unit.ts  dom.ts  dom.unit.ts  dom_attrs.ts  dom_attrs.unit.ts  element.ts  flyweight.ts  function.ts  global.ts  markers.ts  promises.ts  qDev.ts  string.ts  string.unit.ts  stringify.ts
cypress/: BUILD.bazel  cypress.json
cypress/integration/: bootloader_spec.ts  todo_spec.ts  (+3 more)
integration/: BUILD.bazel  README.md  devserver.ts  index.html  package.json  tsconfig.json
scripts/: .npmrc  BUILD.bazel  api-docs.ts  api.ts  binary-release.ts  binding-platform.ts  binding-wasm.ts  browser-extension.ts  build-clean.ts  build.ts  ci-build-node-modules.sh  ci-restore-artifacts.ts  ci-restore-node-modules.sh  clean-up-packages.ts  cli.ts  compiled-string-plugin.ts  copy-files.ts  create-qwik-cli.ts  devserver.ts  devtools.ts  docs-size-results.json  dts-shim.ts  e2e-cli.ts  eslint-docs.ts  eslint.ts  git_steps.sh  index.js  index.ts  jsx-types.ts  jsx-types.unit.ts  link-local-package.ts  optimizer-change-utils.ts  optimizer-release-guard.ts  pack-local-qwik-core.ts  package-json.ts  package_build.bzl  patch-workspace-packages.ts  platform-binding.ts  publish.ts  pull-ci-updated-bench.ts  (+57 more)
server/: BUILD.bazel  app.js  core-3bbc8927.js  core-fa44f789.js  entry.dev.js  entry.server.js  entry_hooks-90a71ffe.js  entry_hooks-911279e8.js  fs_util.ts  logo.js  main.ts  package.json  root.js
src/: BUILD.bazel  Cargo.toml  api-extractor-darwin.json  api-extractor.json  bootloader-shared.ts  bootloader-shared.unit.ts  core-api-extractor-darwin.json  core-api-extractor-k8.json  core-api-extractor.json  core.api.gold.md  jsx_runtime.ts  package.json  prefetch-worker.ts  prefetch.ts  qwikloader-entry.ts  qwikloader-prefetch.ts  qwikloader.ts  qwikloader.unit.ts  qwikloader_script.ts  qwikloader_script.unit.ts  root.tsx
tools/: BUILD.bazel  my_rollup.bzl  rollup_example.js
(+3805 files in other folders)
