load("//scripts:package_build.bzl", "package_build")

package(default_visibility = ["//visibility:public"])

package_build(
    name = "package",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
            "src/**/*.md",
            "src/**/*.json",
            "integration/devserver.ts",
        ],
        exclude = [
            "src/**/*.unit.ts",
            "src/**/*.unit.tsx",
        ],
    ),
    deps = [
        ":package.json",
        ":tsconfig.json",
        ":LICENSE",
        ":README.md",
    ]
)
