load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//scripts:package_build.bzl", "package_build")

package(default_visibility = ["//visibility:public"])

package_build(
    name = "package",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
            "src/**/*.md",
            "src/**/*.json",
            "integration/devserver.ts",
        ],
        exclude = [
            "src/**/*.unit.ts",
            "src/**/*.unit.tsx",
        ],
    ),
    deps = [
        ":package.json",
        ":tsconfig.json",
        ":LICENSE",
        ":README.md",
    ]
)

js_library(
    name = "package_lib",
    package_name = "@builder.io/qwik",
    srcs = [
        ":package/core.cjs",
        ":package/core.d.ts",
        ":package/core.cjs.map",
        ":package/core.mjs",
        ":package/core.mjs.map",
        ":package/jsx-runtime.cjs",
        ":package/jsx-runtime.d.ts",
        ":package/jsx-runtime.mjs",
        ":package/optimizer.cjs",
        ":package/optimizer.d.ts",
        ":package/optimizer.mjs",
        ":package/package.json",
        ":package/qwikloader.js",
        ":package/qwikloader.debug.js",
        ":package/qwikloader.optimize.js",
        ":package/qwikloader.optimize.debug.js",
        ":package/server/index.cjs",
        ":package/server/index.d.ts",
        ":package/server/index.mjs",
        ":package/testing/index.cjs",
        ":package/testing/index.d.ts",
        ":package/testing/index.mjs",
        ":package/testing/jest-preprocessor.cjs",
        ":package/testing/jest-preprocessor.mjs",
        ":package/testing/jest-preset.cjs",
        ":package/testing/jest-preset.mjs",
      ],
    deps = [":package"],
)
