package(default_visibility = ["//visibility:public"])

load("@npm//mocha:index.bzl", "mocha_test")
load("@npm//@microsoft/api-extractor:index.bzl", "api_extractor")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "generated_file_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/terser:index.bzl", "terser_minified")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

js_library(
    name = "client",
    package_name = "qoot",
    srcs = ["package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.ts"], exclude=["qootloader.ts", "**/*.unit.ts", "CONFIG.ts"]),
    # TODO: https://bazelbuild.github.io/rules_nodejs/TypeScript.html#ts_project-supports_workers
)

filegroup(
    name = "project.d.ts",
    output_group = "types",
    srcs = [":project"],
)

ts_project(
    name = "CONFIG",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = [ "CONFIG.ts"],
    deps = [ ":client" ]
)

rollup_bundle(
    name = "qoot",
    entry_point = "index.js",
    config_file = "//:rollup.config.js",
    deps = [":client"],
)

terser_minified(
    name = "qoot.min",
    src = "qoot.js",
    config_file = "//:terser.config.json",
    sourcemap = False,
    terser_bin = "@npm//terser/bin:terser"
)

ts_project(
    name = "qootloader",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = ["qootloader.ts"],
)

terser_minified(
    name = "qootloader.min",
    src = "qootloader.js",
    config_file = "//:terser.config.json",
    sourcemap = False,
    terser_bin = "@npm//terser/bin:terser"
)

ts_project(
    name = "unit_lib",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.unit.ts", "**/*.unit.tsx"]),
    deps = [
        "@npm//@types/mocha",
        "@npm//@types/chai",
        "//client/testing",
        ":CONFIG",
    ]
)

mocha_test(
    name = "unit",
    tags = ["unit"],
    args = ["**/*.unit.js"],
    data = [
        ":unit_lib",
        "@npm//chai",
        "//client/testing",
    ],
)

api_extractor(
    name = "public_api_extractor",
    args = [
        "run", 
        "--verbose",
        "--local",
        "--config", 
        "client/api-extractor.json",
    ],
    data = [
        ":project",
        "api-extractor.json",
        "//:package.json",
        "//:tsconfig.base.json",
        "//:tsconfig.bazel.json",
    ],
    outs = [ 
        "qoot.d.ts",
        ":qoot.api.md",
     ]
)

generated_file_test(
    name = "publicAPI.md",
    src = ":qoot.api.gold.md", 
    generated = ":qoot.api.md",
    tags = ["unit"],
)

genrule(
    name = "LICENSE.copy",
    srcs = ["//:LICENSE"],
    outs = ["LICENSE"],
    output_to_bindir = 1,
    cmd = "cp $< $@",
)

pkg_npm(
    name = "qoot_pkg",
    srcs = [
        ":package.json",
    ],
    deps = [
        ":LICENSE",
        ":qoot",
        ":qoot.min",
        ":qoot.d.ts",
        ":qootloader",
        ":qootloader.min",
    ],
    substitutions = {"//internal/": "//"},
)