load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@cypress//:index.bzl", "cypress_web_test")

package(default_visibility = ["//visibility:public"])

# You must create a cypress plugin in order to boot a server to server your application.
# It can be written as a javascript file or in typescript using ts_library or ts_project.
ts_project(
    name = "plugins_file",
    testonly = True,
    srcs = ["plugins/index.ts"],
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "@npm//@types/node",
        "@npm//cypress",
    ],
)

ts_project(
    name = "integration_specs",
    testonly = True,
    srcs = glob(["integration/**/*.ts"]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "@npm//@types/node",
        "@npm//cypress",
    ],
)

cypress_web_test(
    name = "cypress",
    srcs = [":integration_specs"],
    config_file = "//:cypress.json",
    plugins_file = ":plugins_file",
    tags = ["e2e"],
)
