load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "js_library", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "integration_lib",
    package_name = "qwik_integration",
    srcs = ["package.json"],
    deps = [
        ":integration",
    ],
)

ts_project(
    name = "integration",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.d.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.unit.ts",
            "**/*.unit.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//client",
    ],
)

copy_to_bin(
    name = "static_files",
    srcs = glob([
        "**/*.html",
        "**/*.css",
    ]),
)

nodejs_binary(
    name = "server",
    data = [
        ":integration_lib",
        ":static_files",
        "//client:qwik",
        "//client:qwikloader",
        "//client:qwikloader.min",
        "//server",
        "@npm//domino",
    ],
    entry_point = "//server:main.js",
    templated_args = [
        "--node_options=--experimental-modules",
        "--nobazel_patch_module_resolver",
        "--root",
        "qwik/client",
        "qwik/integration",
    ],
)
