load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "js_library", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "integration_lib",
    package_name = "qwik_integration",
    srcs = ["package.json"],
    deps = [
        ":integration",
    ],
)

ts_project(
    name = "integration",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.d.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.unit.ts",
            "**/*.unit.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//src/core",
    ],
)

copy_to_bin(
    name = "static_files",
    srcs = glob([
        "**/*.html",
        "**/*.css",
    ]),
)

nodejs_binary(
    name = "server",
    data = [
        ":integration_lib",
        ":static_files",
        "//src:qwikloader",
        "//src:qwikloader.min",
        # The next two lines are duplicates and should be unifed somehow.
        "//src/core",  # This is needed so that `import '@builder.io/qwik'` works
        "//src:core.js",  # This is needed so that server can serve '@builder.io/qwik` as single file.
        "//src/server",
        "@npm//domino",
    ],
    entry_point = "//src/server:main.js",
    templated_args = [
        "--node_options=--experimental-modules",
        "--nobazel_patch_module_resolver",
        "--root",
        "qwik/src",
        "qwik/src/core",
        "qwik/integration",
    ],
)
