load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

# This defines the binary we want as part of the rule.
nodejs_binary(
    name = "package_build_binary",
    entry_point = ":index.js",
    templated_args = [
        "--build",
        # Adding dev seems to break the output in a way where a CJS output still has `import()`
        # "--dev",
        "--tsc",
        "--api",
        # Dissable these flags, as we don't need them for now.
        # "--platform-binding",
        # "--wasm",
    ]
)

filegroup(
    name = "all_build_source",
    srcs = glob(
        [
            "shim/__dirname.js",
            "shim/globalthis.js",
            "*.ts*",
            "*.json",
        ],
        exclude = [
            "*.unit.ts",
        ],
    ),
)
