load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "server",
    package_name = "qwik_server",
    srcs = ["package.json"],
    deps = [
        ":server_lib",
    ],
)

ts_project(
    name = "server_lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.unit.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//client",
        "@npm//@types/express",
        "@npm//@types/source-map-support",
        "@npm//commander",
        "@npm//domino",
        "@npm//express",
        "@npm//source-map-support",
    ],
)
