load("@npm//@bazel/esbuild:index.bzl", "esbuild")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

esbuild(
    name = "qoot",
    entry_point = "index.ts",
    platform = "node",
    tool = select({
        "@bazel_tools//src/conditions:darwin": "@esbuild_darwin//:bin/esbuild",
        "@bazel_tools//src/conditions:linux_x86_64": "@esbuild_linux//:bin/esbuild",
        "@bazel_tools//src/conditions:windows": "@esbuild_windows//:esbuild.exe",
    }),
    deps = [
        ":cjs",
        "//client",
    ],
)

ts_project(
    name = "cjs",
    srcs = ["index.ts"],
    declaration = True,
    tsconfig = "//:tsconfig",
    # TODO: https://bazelbuild.github.io/rules_nodejs/TypeScript.html#ts_project-supports_workers
    deps = [
        "//client",
    ],
)

exports_files([
    "package.json",
])
