package(default_visibility = ["//visibility:public"])

load("@npm//mocha:index.bzl", "mocha_test")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

js_library(
    name = "event",
    srcs = [":package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.ts"], exclude=["**/*.unit.ts", "types.ts"]),
    deps = [
        ":types",
        "//client/assert",
        "//client/error",
        "//client/util",
        "//client/import",
        "//client/injection",
    ],
)

ts_project(
    name = "types",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = ["types.ts"],
    deps = [
        "//client/injection:types",
    ],
)

ts_project(
    name = "unit_lib",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.unit.ts"]),
    deps = [
        ":event",
        "@npm//@types/mocha",
        "@npm//@types/chai",
        "//client/testing",
        "//client:CONFIG",
    ]
)

mocha_test(
    name = "unit",
    tags = ["unit"],
    args = ["**/*.unit.js"],
    data = [
        ":unit_lib",
        "@npm//chai",
        "//client/testing",
    ],
)
