package(default_visibility = ["//visibility:public"])

load("@npm//mocha:index.bzl", "mocha_test")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

js_library(
    name = "import",
    srcs = [":package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(
        ["**/*.ts", "**/*.tsx"], 
        exclude=["**/*.unit.ts", "**/*.unit.ts", "types.ts"]),
    deps = [
        "//client/util",
        "//client/assert",
        ":types",
    ],
)

ts_project(
    name = "types",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = ["types.ts"],
)


ts_project(
    name = "unit_project",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.unit.ts", "**/*.unit.tsx", "**/*_unit_ts"]),
    deps = [
        ":import",
        "//client/testing",
        "//client/util",
        "@npm//@types/node",
        "@npm//@types/mocha",
        "@npm//@types/chai",
    ]
)

js_library(
    name = "unit_lib",
    srcs = [":package.json"],
    deps = [
        ":unit_project",
    ],
)


mocha_test(
    name = "unit",
    tags = ["unit"],
    args = ["**/*.unit.js", "**/*_unit_tsx"],
    data = [
        ":unit_lib",
        "//client/testing",
        "@npm//chai",
    ],
)
