package(default_visibility = ["//visibility:public"])

load("@npm//jasmine:index.bzl", "jasmine_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "injection",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.ts"], exclude=["**/*.unit.ts"]),
)

ts_project(
    name = "injection_unit",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.unit.ts"]),
    deps = [
        ":injection",
        "@npm//@types/jasmine",
    ]
)

jasmine_test(
    name = "unit",
    args = ["**/*.unit.js"],
    tags = ["unit"],
    data = [
        ":injection_unit",
    ],
)
