package(default_visibility = ["//visibility:public"])

load("@npm//mocha:index.bzl", "mocha_test")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

js_library(
    name = "service",
    srcs = [":package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.ts"], exclude=["**/*.unit.ts", "types.ts"]),
    deps = [
        ":types",
        "//client/assert",
        "//client/util",
        "//client/import",
        "//client/import:types",
        "//client/injection",
    ],
)

ts_project(
    name = "types",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = ["types.ts"],
    deps = [
        "//client/import:types",
    ],
)

ts_project(
    name = "unit_lib",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.unit.ts"]),
    deps = [
        ":service",
        "@npm//@types/mocha",
        "@npm//@types/chai",
        "//client/testing",
        "//client:CONFIG",
    ]
)

mocha_test(
    name = "unit",
    tags = ["unit"],
    args = ["**/*.unit.js"],
    data = [
        ":unit_lib",
        "@npm//chai",
        "//client/testing",
    ],
)
