package(default_visibility = ["//visibility:public"])

load("@npm//mocha:index.bzl", "mocha_test")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

# TODO: This package should have public API and test for public API stabality

js_library(
    name = "testing",
    package_name = "qoot_testing",
    srcs = ["package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.ts", "**/*.tsx"], exclude=["**/*.unit.ts", "**/*.unit.tsx"]),
    deps = [
        "@npm//@types/source-map-support",
        "@npm//domino",
        "@npm//source-map-support",
        "//client",
    ]
)


ts_project(
    name = "unit_project",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.unit.ts", "**/*.unit.tsx"]),
    deps = [
        ":testing",
        "@npm//@types/mocha",
        "@npm//@types/chai",
        "@npm//chai",
    ]
)

js_library(
    name = "unit_lib",
    package_name = "qoot_testing",
    srcs = ["package.json"],
    deps = [
        ":unit_project",
    ],
)


mocha_test(
    name = "unit",
    tags = ["unit"],
    args = ["**/*.unit.js"],
    data = [
        ":unit_lib",
        ":testing",
        "@npm//chai"
    ],
)
