package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")


ts_project(
    name = "hello_server",
    srcs = glob(["**/*.ts", "**/*.tsx"], exclude=["**/*.unit.ts", "**/*.unit.tsx"]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//client:lib",
    ],
)

nodejs_binary(
    name = "serve",
    entry_point = "//server:main.js",
    templated_args = [
        "--node_options=--experimental-modules",
        "--nobazel_patch_module_resolver",
        "--root", 
        "client",
        "integration/hello_server",
    ],
    data = [
        ":static_files",
        ":hello_server",
        "//server",
        "//client",
        "//client:loader",
    ],
)